section13/5.aspnetMvc/frontend/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizzafrontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pizzafrontend
    spec:
      containers:
      - name: pizzafrontend
        image: renanrgarcia/pizzafrontend:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: pizzafrontend
