section13/5.aspnetMvc/frontend/frontend-volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-volume
  labels:
    app: frontend-volume-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: aspnet
  template:
    metadata:
      labels:
        component: aspnet
    spec:
      containers:
        - name: container-volume
          image: renanrgarcia/pizzafrontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: myvolume
              mountPath: "/app/myvolume"
      volumes:
        - name: myvolume
          emptyDir: {}
