section13/5.aspnetMvc/frontend/pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: aspnet-pod
  labels:
    type: aspnet-pod
spec:
  containers:
    - name: aspn-container
      image: renanrgarcia/pizzafrontend:latest
      ports:
        - containerPort: 80
          name: "frontend-mvc"
      volumeMounts:
        - name: aspn-storage
          mountPath: "/app/myvolume"
  volumes:
    - name: aspn-storage
      persistentVolumeClaim:
        claimName: aspnet-pvc # Label to match the PVC
