section13/5.aspnetMvc/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pizzafrontend
spec:
  type: NodePort
  selector:
     app: pizzafrontend
  ports:
    - port: 8080
      targetPort: 80
